<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developers.shreeganesha.ranazunjardholtasha.Follow_Us">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#546E7A">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="125dp"
            android:id="@+id/facebook_Ranazunjar"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/insta"
            android:id="@+id/instagram_Ranazunjar"
            android:layout_marginStart="50dp"
            android:layout_alignTop="@+id/facebook_Ranazunjar"
            android:layout_toEndOf="@+id/facebook_Ranazunjar" />

        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/gmail"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/facebook_Ranazunjar"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="77dp"
            android:id="@+id/imageView5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_Ranazunjar"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:id="@+id/textView7"
            android:textSize="20sp"
            android:layout_marginStart="23dp"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_toEndOf="@+id/imageView5"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction3"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:layout_marginBottom="37dp"
            android:id="@+id/textView9"
            android:layout_above="@+id/textView7"
            android:layout_alignStart="@+id/imageView5"
            android:layout_marginStart="39dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_Us"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_above="@+id/instagram_Ranazunjar"
            android:layout_toEndOf="@+id/imageView5"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="43dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction4"
            android:textColor="#fff"
            android:layout_below="@+id/facebook_Ranazunjar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:alpha="0.7"/>
    </RelativeLayout>
</FrameLayout>
