<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developers.shreeganesha.ranazunjardholtasha.Contact_Us">

    <!-- TODO: Update blank fragment layout -->


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#546E7A">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/contact_1"
            android:src="@drawable/rohit"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/contact_2"
            app:layout_constraintEnd_toStartOf="@+id/contact_2"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintTop_toTopOf="@+id/contact_2"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction2"
            android:textColor="#ffff"
            android:layout_above="@+id/contact_2"
            android:layout_centerHorizontal="true"
            android:alpha="0.6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rohit"
            android:textColor="#ffff"
            android:id="@+id/textView4"
            android:layout_below="@+id/contact_1"
            android:layout_alignStart="@+id/contact_1"
            app:layout_constraintStart_toStartOf="@+id/contact_1"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contact_1"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="21dp"
            android:text="@string/tushar"
            android:textColor="#ffff"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/contact_2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contact_2"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satish"
            android:textColor="#ffff"
            android:id="@+id/textView6"
            android:layout_below="@+id/contact_3"
            android:layout_alignStart="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/contact_3"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contact_3"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_3" />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/contact_2"
            android:src="@drawable/tushar"
            android:layout_alignTop="@+id/contact_1"
            android:layout_centerHorizontal="true"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginRight="140dp" />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/contact_3"
            android:src="@drawable/satish_contact"
            android:layout_below="@+id/textView5"
            android:layout_toEndOf="@+id/contact_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/sonya"
            android:layout_alignTop="@+id/contact_2"
            android:layout_alignParentEnd="true"
            android:id="@+id/contact_4"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contact_2"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/contact_2"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sonya"
            android:textColor="#ffff"
            android:layout_above="@+id/contact_3"
            android:layout_alignParentEnd="true"
            app:layout_constraintStart_toStartOf="@+id/contact_4"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contact_4"
            app:layout_constraintBottom_toBottomOf="@+id/textView5" />



    </android.support.constraint.ConstraintLayout>


</FrameLayout>
